# RuNA

./: .gitignore  Cargo.toml  README.md  TODO.txt  crates.js  index.html  search-index.js  settings.html  source-files.js
.cargo/: config.toml
.github/workflows/: rustdoc.yaml
benches/: bench.rs  dist.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/runa/math/: trait.MetricSpace.js
misc/: logo.xcf
runa/: all.html  index.html  sidebar-items.js
runa/dna/: enum.Dna.html  index.html  sidebar-items.js  struct.DnaBlock.html  struct.DnaMetricSpace.html
runa/io/: fn.read_test_inst.html  fn.read_test_inst_of_size.html  fn.read_test_insts_all.html  fn.read_test_insts_by_size.html  index.html  sidebar-items.js
runa/math/: fn.align_lettre_mot.html  fn.coupure.html  fn.cout_align.html  fn.dist_1.html  fn.dist_2.html  fn.dist_dp_full.html  fn.dist_naif.html  fn.dist_naif_rec.html  fn.mot_gaps.html  fn.prog_dyn.html  fn.rm_gaps.html  fn.sol_1.html  fn.sol_1_tab.html  fn.sol_2.html  fn.sol_2_ll.html  index.html  sidebar-items.js  struct.Align.html  trait.MetricSpace.html
src/: dna.rs  io.rs  lib.rs  main.rs  math.rs
src/runa/: dna.rs.html  io.rs.html  lib.rs.html  math.rs.html
tests/: exec.rs  mem_use.rs
tests/genome_instances_data/: Instance_long_short.adn
(+3 files in other folders)
