[package]
name = "RuNA"
description = "RuNA is a library for aligning DNA sequences. "
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Kacper Ozieblowski", "Rodrigue Tavernier"]

[lib]
name = "runa"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.23" # for printing time in benchmarks
simple-error = "0.1.9"

[[bench]]
name = "bench"
harness = false

[[test]]
name = "mem_use"
harness = false